--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_NAME=data_process
+DB_NAME=
 DB_USER=postgres
-DB_PASSWORD=Huina1234@!0987#
+DB_PASSWORD=
 DB_HOST=host.docker.internal
 DB_PORT=5432
