--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-# Definējam nosauktos sējumus datu saglabāšanai (no jūsu vecās konfig.)
+# Definē nosauktos sējumus datu saglabāšanai (no jūsu vecās konfig.)
 volumes:
   shared-workspace:
     name: lokala_datu_kratuve
@@ -79,7 +79,9 @@ services:
 
   # Spark Worker 1 (Bitnami balstīts)
   spark-worker-1:
-    image: bitnami/spark:3.4.2
+    build:
+      context: .
+      dockerfile: spark-worker.Dockerfile
     container_name: spark-worker-1
     ports:
       - "8081:8081"
@@ -106,7 +108,9 @@ services:
 
   # Spark Worker 2 (Bitnami balstīts)
   spark-worker-2:
-    image: bitnami/spark:3.4.2
+    build:
+      context: .
+      dockerfile: spark-worker.Dockerfile
     container_name: spark-worker-2
     ports:
       - "8082:8082"
@@ -132,7 +136,9 @@ services:
 
   # Spark Worker 3 (Bitnami balstīts)
   spark-worker-3:
-    image: bitnami/spark:3.4.2
+    build:
+      context: .
+      dockerfile: spark-worker.Dockerfile
     container_name: spark-worker-3
     ports:
       - "8083:8083"
